--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "re-base": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.6.4",
+    "react-dropdown-select": "^3.0.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
