--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.4",
     "react-dropdown-select": "^3.0.0",
+    "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
