--- a/package.json
+++ b/package.json
@@ -3,32 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "firebase": "^6.0.2",
+    "bootstrap": "^4.4.1",
+    "firebase": "^6.6.2",
     "re-base": "^4.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
-    "react-dropdown-select": "^3.0.0",
-    "react-redux": "^7.0.3",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-dropdown-select": "^3.6.8",
+    "react-firebase-file-uploader": "^2.4.3",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "semantic-ui-react": "^0.87.1"
+    "redux": "^4.0.4",
+    "semantic-ui-react": "^0.87.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{js, html, jsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1"
   },
   "browserslist": {
     "production": [
